--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "stressTest": "mocha test/stress.js",
     "flatten": "node tools/flatten.js",
     "generate": "node dist/tools/generateMessages.js",
-    "compile": "babel --presets es2015 src/ -d dist/",
+    "compile": "babel --presets=env,es2015 src/ -d dist/",
     "prepublish": "npm run compile"
   },
   "author": "chris smith",
@@ -22,10 +22,11 @@
     "url": "git://github.com/RethinkRobotics-opensource/rosnodejs"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5",
     "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0"
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   },
   "dependencies": {
     "argparse": "1.0.7",
